--- a/styles/numWhite.css
+++ b/styles/numWhite.css
@@ -59,7 +59,7 @@ h3{
 /*===================BANNER==================================*/
 
 header {
-  background:#343a40;
+  background:rgb(245,245,245);
   background-image:url("../images/header.jpg");
   background-position: right;
   background-repeat: no-repeat;
